tests/baselines/reference/asyncModule_es6.errors.txt
asyncModule_es6.ts(1,1): error TS1042: 'async' modifier cannot be used here.
asyncModule_es6.ts(1,7): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== asyncModule_es6.ts (2 errors) ====
    async module M {   
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
          ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }